--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="not-found">
             <img src="images/404.png">
-            <p>Oops!! Invalid location :/</p>
+            <p>Oops! Invalid location :/</p>
         </div>
 
         <div class="weather-box">
@@ -53,7 +53,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
     <script src="index.js"></script>
-
 </body>
 
 </html>
